fix: remove dynamic agent loading warning